# cpp_msu

./: AllocateShared.cpp  Allocator.cpp  Any.cpp  CMakeLists.txt  Complex.hpp  ComplexNumber.cpp  Compose.cpp  Size.cpp  TIntrusivePtr.cpp  TIntusivePtr.cpp  TItems.cpp  are_same.cpp
Task2/: CMakeLists.txt  rnd_gen.cpp  utils.h
Task3/: CMakeLists.txt  problem1.cpp
Task3/src/: CMakeLists.txt  MarketPlace.h  Product.cpp  Product.h  Shop.cpp  Shop.h  problem1.cpp  problem2.cpp
Task3/test/: CMakeLists.txt  ProductTest.cpp  dummy_test.cpp  main_test.cpp
